day-15/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: 
      limits:
        cpu: "500m"
        memory: "128Mi"
    securityContext:      
      runAsNonRoot: true    # para nao rodar o pod como root
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
