day-15/require-resources-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources-limits
spec:
  validationFailureAction: Enforce
  rules:
    - name: cvalidate-limits
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
          - giropops
      validate:
        message: "Precisa definir os limites de recursos para CPU e memória."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
